[package]
name = "mvp_matcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tqdm = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3"
csv = "1.3.0"
